@@ -1,6 +1,5 @@
 package com.checkin.api.config;
 
-import com.checkin.api.security.CustomUserDetailsService;
 import com.checkin.api.security.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,15 +16,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
-/**
- * Configuração de segurança da aplicação.
- *
- * Integra autenticação via JWT, configura CORS e define as regras de autorização
- * para cada endpoint. A autenticação é stateless, ou seja, não mantém
- * sessão no servidor.
- */
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
@@ -36,44 +28,26 @@ public class SecurityConfig {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
-    /**
-     * Bean responsável por encriptar senhas utilizando o algoritmo BCrypt.
-     *
-     * @return Implementação de PasswordEncoder
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Exponha o AuthenticationManager para ser utilizado no AuthController.
-     *
-     * @param authenticationConfiguration Configuração de autenticação automática
-     * @return Gerenciador de autenticação
-     * @throws Exception quando não for possível obter o gerenciador
-     */
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration authenticationConfiguration
+    ) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    /**
-     * Configura a cadeia de filtros de segurança. Desabilita CSRF (por se tratar de API
-     * stateless), ativa CORS, define a estratégia de criação de sessão como
-     * STATELESS e adiciona o filtro de autenticação JWT antes do filtro padrão
-     * UsernamePasswordAuthenticationFilter.
-     *
-     * @param http HttpSecurity configurável
-     * @return Cadeia de filtros de segurança
-     * @throws Exception em caso de erro na configuração
-     */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
                                 "/api/auth/**",
@@ -83,33 +57,26 @@ public class SecurityConfig {
                                 "/h2-console/**"
                         ).permitAll()
                         .anyRequest().authenticated()
-                );
-
-        // Adiciona o filtro JWT antes do filtro padrão de autenticação
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
-        // Permite frames (necessário para o console do H2)
-        http.headers(headers -> headers.frameOptions(frame -> frame.disable()));
+                )
+                .headers(headers -> headers.frameOptions(frame -> frame.disable()))
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    /**
-     * Configura CORS para permitir requisições do React Native e outras origens confiáveis.
-     * Ajuste os padrões de origem conforme necessário.
-     *
-     * @return Fonte de configuração CORS
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
